ajout des views

--- a/app/dashboard.ejs
+++ b/app/dashboard.ejs
@@ -45,5 +45,12 @@
             </div>
             <div class="scoring"></div>
         </div>
+        <script>
+            var GLOBAL = {
+                url: '<%= url %>',
+                token: '<%= token %>',
+                ready2play: <%= ready2play %>
+            };
+        </script>
     </body>
 </html>
