ajout des sockets

--- a/app/dashboard.ejs
+++ b/app/dashboard.ejs
@@ -54,7 +54,7 @@
             };
             
             var socket = io.connect(GLOBAL.url);
-            socket.emit('user', {  pseudo: 'test', room: GLOBAL.token  });
+            socket.emit('user', {  pseudo: 'test', room: GLOBAL.token  }, function (data) {});
         </script>
     </body>
 </html>
