modified:   app/dashboard.ejs

--- a/app/dashboard.ejs
+++ b/app/dashboard.ejs
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="instruction">
-                Scanne ce QR Code pour parametrer votre partie.
+                Scanne ce QR Code pour parametrer la partie.
             </div>
             <div class="howto">
                 <div class="picture">
