--- a/app/admin.ejs
+++ b/app/admin.ejs
@@ -55,7 +55,7 @@
 	</div>
     <script src="/bower_components/vue/dist/vue.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/js/notify.min.js"></script>
+    <script src="/bower_components/notify.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/admin.js"></script>
     
