--- a/app/admin.ejs
+++ b/app/admin.ejs
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
-		      <a class="navbar-brand" href="#">
+		      <a class="navbar-brand">
 		        <p> {{ nomPage }} </p>
 		      </a>
 		    </div>
