--- a/app/user.ejs
+++ b/app/user.ejs
@@ -3,10 +3,58 @@
 <head>
     <title>QuizzJS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/user.css">
+    <link rel="stylesheet" href="/styles/user.css">
+    
 </head>
     <body>
-        <div id="user-view" class="pages"></div>
+        <div id="user-view" class="pages">
+            
+            <div id="UserLoginView" class="login-wrapper">
+                <div class="login-form">
+                    <h3>Quel est votre pseudo?</h3>
+                    <input type="text" id="pseudo" maxLength="14" autoComplete="off" autoFocus="true"></input>
+                    <button v-on:click="beginOnClick">Commencer à jouer</button>
+                </div>
+            </div>
+            
+            <div id="WaitStarting" class="login-wrapper">
+                <div>
+                    <h3>Bienvenue {{pseudo}}</h3>
+                    <div>{{msgInfo}}</div>
+                    <div>{{msgDebug}}</div>
+                </div>
+            </div>
+            
+            <div id="UserReloadPartiView">
+                <div class="login-wrapper">
+                    <div class="login-form">
+                        <button v-on:click="reloadSameParty">Voulez vous relancer une partie identique ?</button>
+                        <button v-on:click="reloadAdmin">Voulez vous relancer une partie avec des paramètres différents ? SOON !!!!</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div id="PartyStarted">
+                <div id="listeReponse" class="btn-wrapper">
+                    <div class="btn" v-on:click="reponseOnclick(this,1)">{{reponse1}}</div>
+                    <div class="btn" v-on:click="reponseOnclick(this,2)">{{reponse2}}</div>
+                    <div class="btn" v-on:click="reponseOnclick(this,3)">{{reponse3}}</div>
+                    <div class="btn" v-on:click="reponseOnclick(this,4)">{{reponse4}}</div>
+                </div>
+                <div class="recap-wrapper">
+                    <div>
+                        <h3>Vous avez répondu :</h3>
+                        <h3>{{reponseDonneeText}}</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <script src="/bower_components/vue/dist/vue.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="/js/notify.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/user.js"></script>
         
         <script>
             var GLOBAL = {
