--- a/app/styles/admin.scss
+++ b/app/styles/admin.scss
@@ -29,6 +29,13 @@ h4{
     color: white;
 }
 
+table{
+    width:100%;
+}
+td{
+   width:50%; 
+}
+
 /* login form */
 .login-wrapper {
     height: 100%;
@@ -65,7 +72,9 @@ h4{
     text-align: center;
 }
 
-
+body{
+    text-align:center;
+}
 
 /* pad */
 
@@ -100,4 +109,53 @@ h4{
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+.scene{
+    font-family: 'Sigmar One', cursive;
+    font-size: 25px;
+  /*perspective: 600px;*/
+}
+.flip{
+  /*transform-style: preserve-3d;*/
+}
+.flip,
+.flip > div{
+  width: inherit;
+  height: inherit;
+  transition: transform 1s;
+}
+.flip > div{
+  position: absolute;
+  backface-visibility: hidden;
+  width:100%;
+}
+.avant{
+  transform: perspective(600px) rotateX(0deg);
+}
+.arriere{
+  transform: perspective(600px) rotateX(180deg);
+}
+.afficherVerso{
+  transform: perspective(600px) rotateX(180deg);
+}
+.afficherRecto{
+  transform: perspective(600px) rotateX(360deg);
+}
+
+button{
+	border : solid 2px #c7c7c7;
+	border-radius : 5px 5px 20px 20px ;
+	moz-border-radius : 5px 5px 20px 20px ;
+	font-size : 20px;
+	color : #00b7ff;
+	padding : 2px 10px;
+	background : #D4EBF8;
+	background : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e6e6e6));
+	background : -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+	background : -webkit-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+	background : -o-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+	background : -ms-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+	background : linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
 }
