--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -25,7 +25,7 @@ html, body{
 .player{
     height: 105px;
     width: 140px;
-    background-image: url(../img/player.png);
+    background-image: url(../images/player.png);
     background-repeat: no-repeat;
     background-position: top;
     position: relative;
