modification user.js

--- a/app/styles/user.scss
+++ b/app/styles/user.scss
@@ -101,3 +101,8 @@ h4{
     justify-content: center;
     text-align: center;
 }
+
+.scene{
+    font-family: 'Sigmar One', cursive;
+    font-size: 25px;
+}
