--- a/app/styles/admin.scss
+++ b/app/styles/admin.scss
@@ -14,148 +14,115 @@ html, body {
     margin: 0;
     height: 100%;    
     font-family: sans-serif;
+    text-align:center;
 }
 
-#user-view{height: 100%;}
 
-.content{
+#content{
     display: flex;
     flex-direction: column;
     height: 100%;
     background-color: #6699ff;
+    
+    .titrePage{
+        color: white;
+        font-size: 16px;
+        border-bottom: 1px solid white;
+        padding-bottom: 10px;
+    }
+    
+    .action-bar {
+        position: fixed;
+        width: 100%;
+        bottom: 0px;
+        margin: 15px 0;
+        
+        button {
+            font-size: 20px;
+            width: 80%;
+            border: none;
+            height: 50px;
+            margin-top: 20px;
+            background-color: #8BB600;
+            color: #fff;
+        }
+        
+        button:active {
+            opacity: .8;
+        }
+    
+    }
+    
+    h4{
+        color: white;
+    }
+    
+    .scene{
+        font-size: 25px;
+        /*perspective: 600px;*/
+        
+        .flip, .flip > div {
+          width: inherit;
+          height: inherit;
+          transition: transform 1s;
+        }
+        
+        .flip > div{
+          position: absolute;
+          backface-visibility: hidden;
+          width:100%;
+        }
+        
+        
+        .flip{
+          /*transform-style: preserve-3d;*/
+          
+            table {
+                width:100%;
+                
+                td {
+                   width:50%; 
+                }
+                
+                td:active {
+                   opacity: .8; 
+                }
+            }
+                
+            .avant{
+                  transform: perspective(600px) rotateX(0deg);
+            }
+            
+            .arriere{
+                  transform: perspective(600px) rotateX(180deg);
+            }
+            
+            .afficherVerso{
+                  transform: perspective(600px) rotateX(180deg);
+            }
+            
+            .afficherRecto{
+                  transform: perspective(600px) rotateX(360deg);
+            }
+            
+            select {
+                width: 90%;
+                padding: 15px 15px;
+                margin: 0px;
+                font-size: 24px;
+            }
+        }
+    }
 }
 
-h4{
-    color: white;
-}
 
-table{
-    width:100%;
-}
-td{
-   width:50%; 
-}
 
-/* login form */
-.login-wrapper {
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
 
-.login-wrapper h3{text-align: center;}
 
-.login-form{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-}
 
-.login-form button{
-    font-size: 20px;
-    width: 80%;
-    border: none;
-    height: 50px;
-    margin-top: 20px;
-    background-color: #8BB600;
-    color: #fff;
-}
 
-.login-form button:active{opacity: .8;}
 
-.login-form input[type='text']{
-    width: 80%;
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-}
 
-body{
-    text-align:center;
-}
 
-/* pad */
 
-.pad-wrapper{height: 100%;}
 
-.btn-wrapper{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.btn-wrapper .btn{
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    color: #FFF;
-    font-size: 18px;
-}
-
-.btn-wrapper .btn:active{opacity: .8;}
-
-.btn-wrapper .btn:first-child{background-color: #69B854;}
-.btn-wrapper .btn:nth-child(2){background-color: #6AC0E0;}
-.btn-wrapper .btn:nth-child(3){background-color: #EBAD41;}
-.btn-wrapper .btn:nth-child(4){background-color: #D1534C;}
-
-.recap-wrapper{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.scene{
-    font-family: 'Sigmar One', cursive;
-    font-size: 25px;
-  /*perspective: 600px;*/
-}
-.flip{
-  /*transform-style: preserve-3d;*/
-}
-.flip,
-.flip > div{
-  width: inherit;
-  height: inherit;
-  transition: transform 1s;
-}
-.flip > div{
-  position: absolute;
-  backface-visibility: hidden;
-  width:100%;
-}
-.avant{
-  transform: perspective(600px) rotateX(0deg);
-}
-.arriere{
-  transform: perspective(600px) rotateX(180deg);
-}
-.afficherVerso{
-  transform: perspective(600px) rotateX(180deg);
-}
-.afficherRecto{
-  transform: perspective(600px) rotateX(360deg);
-}
-
-button{
-	border : solid 2px #c7c7c7;
-	border-radius : 5px 5px 20px 20px ;
-	moz-border-radius : 5px 5px 20px 20px ;
-	font-size : 20px;
-	color : #00b7ff;
-	padding : 2px 10px;
-	background : #D4EBF8;
-	background : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e6e6e6));
-	background : -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
-	background : -webkit-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
-	background : -o-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
-	background : -ms-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
-	background : linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
-	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
-}
