--- a/app/styles/user.scss
+++ b/app/styles/user.scss
@@ -26,9 +26,17 @@ html, body {
     flex-direction: column;
     height: 100%;
     background-color: #6699ff;
+    text-align : center;
+    color: white;
+    
+    .titrePage{
+        color: white;
+        font-size: 16px;
+        border-bottom: 1px solid white;
+        padding-bottom: 10px;
+    }
     
     .scene{
-        font-family: 'Sigmar One', cursive;
         font-size: 25px;
     }
     
@@ -113,7 +121,6 @@ html, body {
         }
         button {
             font-size: 20px;
-            width: 80%;
             border: none;
             height: 50px;
             margin-top: 20px;
