--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -47,7 +47,7 @@ html, body{
 
 .player.gagnant{background-position: bottom;}
 
-.player.active .pseudo{color: #fff;}
+.player .pseudo.active{color: #fff;}
 
 .player.gagnant .pseudo{color: #fff;}
 
@@ -90,8 +90,7 @@ html, body{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    align-items: center;    
-    display: none;            
+    align-items: center;
 }
 
 .question{
@@ -285,8 +284,7 @@ progress::-webkit-progress-bar{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    align-items: center;    
-    display: none;   
+    align-items: center; 
 }
 
 .cacher{
