Correction image du joueur

--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -47,7 +47,7 @@ html, body{
 
 .player.gagnant{background-position: bottom;}
 
-.player .pseudo.active{color: #fff;}
+.player.active .pseudo{color: #fff;}
 
 .player.gagnant .pseudo{color: #fff;}
 
