--- a/app/dashboard.ejs
+++ b/app/dashboard.ejs
@@ -13,11 +13,15 @@
     		</div>
     		
             <div class="players" v-if="error === ''">
-                <div class="player" v-for="player in players">
-                    <div class="pseudo" v-if="player.username === 'attente'">attente</div>
-                    <div class="pseudo active" v-if="player.username !== 'attente'"><span id="name-{{player.token}}"> {{player.username}} </span><span id="badge-{{player.token}}" class="badge badge-display">0</span></div>
+                <div v-for="player in players">
+                    <div class="player" v-if="player.username === 'attente'">
+                        <div class="pseudo">attente</div>
+                    </div>
+                    <div class="player active" v-if="player.username !== 'attente'">
+                        <div class="pseudo"><span id="name-{{player.token}}"> {{player.username}} </span><span id="badge-{{player.token}}" class="badge badge-display">0</span></div>
+                    </div>
                 </div>
-            
+                
                 <div class="canvas-wrapper">
                     <div class="timelaps-wheel"></div>
                     <canvas id="timelaps" width="100%" height="100%">mince, pas compatible avec cette écran ...</canvas>
