--- a/app/private.ejs
+++ b/app/private.ejs
@@ -7,6 +7,22 @@
 
 <body>
 	<div id="content" class="content" style="display:none">
+	    <div class="header">
+	        
+	    </div>
+	    <div class="body">
+	        <nav class="menu">
+	            
+	        </nav>
+	        <div class="dashboard">
+	           <div class="tracker">
+	       
+	           </div>
+	           <div class="content">
+	       
+	           </div>     
+	        </div>
+	    </div>
 		
 	</div>
 	
